crates/vybe_parser_cobol/src/parser.rs
use crate::token::{Token, TokenKind};
use crate::ast::*;
use crate::lexer::Lexer;

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
}

impl Parser {
    pub fn new(source: &str) -> Result<Self, String> {
        let mut lexer = Lexer::new(source);
        let tokens = lexer.tokenize()?;
        Ok(Parser { tokens, pos: 0 })
    }

    pub fn parse_program(&mut self) -> Result<Program, String> {
        let mut program_id = String::new();
        let mut author = None;
        let mut data_items = Vec::new();
        let mut paragraphs = Vec::new();
        let mut main_body = Vec::new();
        let mut classes = Vec::new();
        let mut interfaces = Vec::new();

        // Parse IDENTIFICATION DIVISION
        self.expect(&TokenKind::Identification)?;
        self.expect(&TokenKind::Division)?;
        self.expect(&TokenKind::Period)?;

        // PROGRAM-ID or CLASS-ID or INTERFACE-ID
        if *self.current() == TokenKind::ClassId {
            self.advance();
            self.expect(&TokenKind::Period)?;
            let class_name = self.expect_ident()?;
            program_id = class_name.clone();
            // Parse INHERITS / IMPLEMENTS
            let mut inherits = None;
            let mut implements_list = Vec::new();
            while !matches!(self.current(), TokenKind::Period | TokenKind::Eof) {
                if self.match_token(&TokenKind::Inherits) {
                    self.match_token(&TokenKind::From);
                    inherits = Some(self.expect_ident()?);
                } else if self.match_token(&TokenKind::Implements) {
                    implements_list.push(self.expect_ident()?);
                    while self.match_token(&TokenKind::Comma) {
                        implements_list.push(self.expect_ident()?);
                    }
                } else {
                    self.advance();
                }
            }
            self.expect(&TokenKind::Period)?;
            // Skip to data/object/factory/procedure
            while matches!(self.current(), TokenKind::Author | TokenKind::DateWritten) {
                self.advance(); self.expect(&TokenKind::Period)?;
                while *self.current() != TokenKind::Period && !self.at_end() { self.advance(); }
                self.match_token(&TokenKind::Period);
            }
            // Parse class body
            let class = self.parse_class_body(class_name, inherits, implements_list)?;
            classes.push(class);
            return Ok(Program { program_id, author, data_items, paragraphs, main_body, classes, interfaces });
        }

        if *self.current() == TokenKind::InterfaceId {
            self.advance();
            self.expect(&TokenKind::Period)?;
            let iface_name = self.expect_ident()?;
            program_id = iface_name.clone();
            let mut inherits_list = Vec::new();
            while !matches!(self.current(), TokenKind::Period | TokenKind::Eof) {
                if self.match_token(&TokenKind::Inherits) {
                    self.match_token(&TokenKind::From);
                    inherits_list.push(self.expect_ident()?);
                } else {
                    self.advance();
                }
            }
            self.expect(&TokenKind::Period)?;
            let iface = self.parse_interface_body(iface_name, inherits_list)?;
            interfaces.push(iface);
            return Ok(Program { program_id, author, data_items, paragraphs, main_body, classes, interfaces });
        }

        // PROGRAM-ID (normal program)
        self.expect(&TokenKind::ProgramId)?;
        self.expect(&TokenKind::Period)?;
        program_id = self.expect_ident()?;
        self.expect(&TokenKind::Period)?;

        // Optional: AUTHOR, DATE-WRITTEN, etc.
        while matches!(self.current(), TokenKind::Author | TokenKind::DateWritten) {
            self.advance();
            self.expect(&TokenKind::Period)?;
            // Skip to next period
            while *self.current() != TokenKind::Period && *self.current() != TokenKind::Eof {
                self.advance();
            }
            if *self.current() == TokenKind::Period { self.advance(); }
        }

        // DATA DIVISION (optional)
        if *self.current() == TokenKind::Data {
            self.advance(); // DATA
            self.expect(&TokenKind::Division)?;
            self.expect(&TokenKind::Period)?;
            data_items = self.parse_data_division()?;
        }

        // PROCEDURE DIVISION
        if *self.current() == TokenKind::Procedure {
            self.advance();
            self.expect(&TokenKind::Division)?;
            // Optional USING clause
            if *self.current() == TokenKind::Using {
                self.advance();
                while *self.current() != TokenKind::Period && *self.current() != TokenKind::Eof {
                    self.advance();
                }
            }
            self.expect(&TokenKind::Period)?;
            // Parse main body + paragraphs
            let (body, paras) = self.parse_procedure_division()?;
            main_body = body;
            paragraphs = paras;
        }

        Ok(Program { program_id, author, data_items, paragraphs, main_body, classes, interfaces })
    }

    // ------------------------------------------------------------------
    // Helpers
    // ------------------------------------------------------------------

    fn current(&self) -> &TokenKind {
        if self.pos < self.tokens.len() { &self.tokens[self.pos].kind } else { &TokenKind::Eof }
    }

    fn current_line(&self) -> u32 {
        if self.pos < self.tokens.len() { self.tokens[self.pos].line } else { 0 }
    }

    fn advance(&mut self) -> &TokenKind {
        let kind = &self.tokens[self.pos].kind;
        if self.pos < self.tokens.len() { self.pos += 1; }
        kind
    }

    fn expect(&mut self, expected: &TokenKind) -> Result<(), String> {
        if self.current() == expected {
            self.advance();
            Ok(())
        } else {
            Err(format!("Expected {:?}, got {:?} at line {}", expected, self.current(), self.current_line()))
        }
    }

    fn expect_ident(&mut self) -> Result<String, String> {
        match self.current().clone() {
            TokenKind::Ident(name) => { self.advance(); Ok(name) }
            // Many keywords can also be identifiers in COBOL
            _ => {
                let name = format!("{:?}", self.current());
                self.advance();
                Ok(name)
            }
        }
    }

    fn at_end(&self) -> bool {
        self.pos >= self.tokens.len() || *self.current() == TokenKind::Eof
    }

    fn match_token(&mut self, kind: &TokenKind) -> bool {
        if self.current() == kind {
            self.advance();
            true
        } else {
            false
        }
    }

    fn skip_periods(&mut self) {
        while *self.current() == TokenKind::Period { self.advance(); }
    }

    // ------------------------------------------------------------------
    // DATA DIVISION
    // ------------------------------------------------------------------

    // ------------------------------------------------------------------
    // OO COBOL: CLASS-ID and INTERFACE-ID parsing
    // ------------------------------------------------------------------

    fn parse_class_body(&mut self, name: String, inherits: Option<String>, implements: Vec<String>) -> Result<ClassDef, String> {
        let mut data_items = Vec::new();
        let mut factory_methods = Vec::new();
        let mut instance_methods = Vec::new();

        // Skip ENVIRONMENT DIVISION if present
        if *self.current() == TokenKind::Environment {
            self.advance(); self.expect(&TokenKind::Division)?; self.expect(&TokenKind::Period)?;
            while !matches!(self.current(), TokenKind::Data | TokenKind::Factory | TokenKind::Object_ | TokenKind::Procedure | TokenKind::EndClass | TokenKind::Eof) {
                self.advance();
            }
        }

        // DATA DIVISION
        if *self.current() == TokenKind::Data {
            self.advance();
            self.expect(&TokenKind::Division)?;
            self.expect(&TokenKind::Period)?;
            data_items = self.parse_data_division()?;
        }

        // FACTORY paragraph (class/static methods)
        if self.match_token(&TokenKind::Factory) {
            self.expect(&TokenKind::Period)?;
            while *self.current() == TokenKind::MethodId {
                factory_methods.push(self.parse_method_def()?);
            }
            self.match_token(&TokenKind::EndFactory);
            self.match_token(&TokenKind::Period);
        }

        // OBJECT paragraph (instance methods)
        if self.match_token(&TokenKind::Object_) {
            self.expect(&TokenKind::Period)?;
            // Object may have its own DATA DIVISION
            if *self.current() == TokenKind::Data {
                self.advance();
                self.expect(&TokenKind::Division)?;
                self.expect(&TokenKind::Period)?;
                let obj_data = self.parse_data_division()?;
                data_items.extend(obj_data);
            }
            while *self.current() == TokenKind::MethodId {
                instance_methods.push(self.parse_method_def()?);
            }
            self.match_token(&TokenKind::EndObject);
            self.match_token(&TokenKind::Period);
        }

        // PROCEDURE DIVISION can also contain methods directly (simplified form)
        if *self.current() == TokenKind::Procedure {
            self.advance();
            self.expect(&TokenKind::Division)?;
            self.expect(&TokenKind::Period)?;
            while *self.current() == TokenKind::MethodId {
                instance_methods.push(self.parse_method_def()?);
            }
        }

        // Methods directly at top level (COBOL 2023 simplified form)
        while *self.current() == TokenKind::MethodId {
            instance_methods.push(self.parse_method_def()?);
        }

        self.match_token(&TokenKind::EndClass);
        self.match_token(&TokenKind::Period);
        // Skip trailing class name
        if let TokenKind::Ident(_) = self.current() { self.advance(); }
        self.match_token(&TokenKind::Period);

        Ok(ClassDef { name, inherits, implements, data_items, factory_methods, instance_methods })
    }

    fn parse_method_def(&mut self) -> Result<MethodDef, String> {
        self.expect(&TokenKind::MethodId)?;
        self.expect(&TokenKind::Period)?;
        let name = self.expect_ident()?;
        let mut is_property_get = false;
        let mut is_property_set = false;
        // Check for OVERRIDE, PROPERTY GET/SET
        while !matches!(self.current(), TokenKind::Period | TokenKind::Eof) {
            if self.match_token(&TokenKind::Override) { continue; }
            if self.match_token(&TokenKind::Property) {
                if self.match_token(&TokenKind::Get) { is_property_get = true; }
                else if self.match_token(&TokenKind::Set2) { is_property_set = true; }
                continue;
            }
            self.advance();
        }
        self.expect(&TokenKind::Period)?;

        // Parse method DATA DIVISION
        let mut params = Vec::new();
        let mut returning = None;
        if *self.current() == TokenKind::Data {
            self.advance();
            self.expect(&TokenKind::Division)?;
            self.expect(&TokenKind::Period)?;
            // LINKAGE SECTION for params
            if *self.current() == TokenKind::Linkage {
                self.advance();
                self.expect(&TokenKind::Section)?;
                self.expect(&TokenKind::Period)?;
                params = self.parse_data_items()?;
            }
            // WORKING-STORAGE SECTION
            if *self.current() == TokenKind::WorkingStorage {
                self.advance();
                self.expect(&TokenKind::Section)?;
                self.expect(&TokenKind::Period)?;
                let _ = self.parse_data_items()?; // local storage
            }
        }

        // Parse PROCEDURE DIVISION [USING params] [RETURNING ret]
        let mut body = Vec::new();
        if *self.current() == TokenKind::Procedure {
            self.advance();
            self.expect(&TokenKind::Division)?;
            if self.match_token(&TokenKind::Using) {
                while !matches!(self.current(), TokenKind::Returning | TokenKind::Period | TokenKind::Eof) {
                    self.advance();
                }
            }
            if self.match_token(&TokenKind::Returning) {
                if let TokenKind::Ident(_) = self.current() {
                    // returning var
                    let ret_name = self.expect_ident()?;
                    returning = Some(DataItem {
                        level: 1, name: ret_name, pic: None, value: None,
                        occurs: None, redefines: None, usage: None,
                        children: Vec::new(), conditions: Vec::new(),
                    });
                }
            }
            self.expect(&TokenKind::Period)?;

            // Parse body statements
            while !matches!(self.current(), TokenKind::EndMethod | TokenKind::Eof) {
                if let Some(stmt) = self.parse_statement()? {
                    body.push(stmt);
                }
                self.skip_periods();
            }
        }

        self.match_token(&TokenKind::EndMethod);
        self.match_token(&TokenKind::Period);
        // Skip trailing method name
        if let TokenKind::Ident(_) = self.current() { self.advance(); }
        self.match_token(&TokenKind::Period);

        Ok(MethodDef { name, params, returning, body, is_property_get, is_property_set })
    }

    fn parse_interface_body(&mut self, name: String, inherits: Vec<String>) -> Result<InterfaceDef, String> {
        let mut methods = Vec::new();

        // Parse method signatures
        while *self.current() == TokenKind::MethodId {
            self.expect(&TokenKind::MethodId)?;
            self.expect(&TokenKind::Period)?;
            let method_name = self.expect_ident()?;
            self.skip_to_period();

            let mut params = Vec::new();
            let mut returning = None;

            // PROCEDURE DIVISION header with USING/RETURNING
            if *self.current() == TokenKind::Procedure {
                self.advance();
                self.expect(&TokenKind::Division)?;
                if self.match_token(&TokenKind::Using) {
                    while !matches!(self.current(), TokenKind::Returning | TokenKind::Period | TokenKind::Eof) {
                        if let TokenKind::Ident(name) = self.current().clone() {
                            self.advance();
                            params.push(DataItem {
                                level: 1, name, pic: None, value: None,
                                occurs: None, redefines: None, usage: None,
                                children: Vec::new(), conditions: Vec::new(),
                            });
                        } else { self.advance(); }
                    }
                }
                if self.match_token(&TokenKind::Returning) {
                    if let TokenKind::Ident(name) = self.current().clone() {
                        self.advance();
                        returning = Some(DataItem {
                            level: 1, name, pic: None, value: None,
                            occurs: None, redefines: None, usage: None,
                            children: Vec::new(), conditions: Vec::new(),
                        });
                    }
                }
                self.match_token(&TokenKind::Period);
            }

            self.match_token(&TokenKind::EndMethod);
            self.match_token(&TokenKind::Period);
            if let TokenKind::Ident(_) = self.current() { self.advance(); }
            self.match_token(&TokenKind::Period);

            methods.push(MethodSignature { name: method_name, params, returning });
        }

        self.match_token(&TokenKind::EndInterface);
        self.match_token(&TokenKind::Period);
        if let TokenKind::Ident(_) = self.current() { self.advance(); }
        self.match_token(&TokenKind::Period);

        Ok(InterfaceDef { name, inherits, methods })
    }

    // ------------------------------------------------------------------
    // DATA DIVISION
    // ------------------------------------------------------------------

    fn parse_data_division(&mut self) -> Result<Vec<DataItem>, String> {
        let mut items = Vec::new();

        // WORKING-STORAGE SECTION / LOCAL-STORAGE SECTION / etc.
        while matches!(self.current(), TokenKind::WorkingStorage | TokenKind::LocalStorage | TokenKind::FileSection | TokenKind::Linkage) {
            self.advance(); // section type
            self.expect(&TokenKind::Section)?;
            self.expect(&TokenKind::Period)?;
            items.extend(self.parse_data_items()?);
        }
        Ok(items)
    }

    fn parse_data_items(&mut self) -> Result<Vec<DataItem>, String> {
        let mut items = Vec::new();
        while let TokenKind::Level(level) = self.current().clone() {
            let item = self.parse_data_item(level)?;
            items.push(item);
        }
        Ok(items)
    }

    fn parse_data_item(&mut self, level: u8) -> Result<DataItem, String> {
        self.advance(); // consume level number

        // 88-level condition
        if level == 88 {
            let name = self.expect_ident()?;
            let mut values = Vec::new();
            if self.match_token(&TokenKind::Value) {
                values.push(self.parse_literal()?);
                while self.match_token(&TokenKind::Comma) {
                    values.push(self.parse_literal()?);
                }
            }
            self.skip_to_period();
            return Ok(DataItem {
                level: 88, name: name.clone(), pic: None, value: None,
                occurs: None, redefines: None, usage: None,
                children: Vec::new(),
                conditions: vec![Condition88 { name, values }],
            });
        }

        let name = self.expect_ident()?;

        let mut pic = None;
        let mut value = None;
        let mut occurs = None;
        let mut redefines = None;
        let mut usage = None;

        // Parse clauses until period
        while *self.current() != TokenKind::Period && !self.at_end() {
            match self.current().clone() {
                TokenKind::Pic => {
                    self.advance();
                    // Optional IS
                    if let TokenKind::Ident(s) = self.current() { if s == "IS" { self.advance(); } }
                    pic = Some(self.parse_pic_string()?);
                }
                TokenKind::Value => {
                    self.advance();
                    // Optional IS
                    if let TokenKind::Ident(s) = self.current() { if s == "IS" { self.advance(); } }
                    value = Some(self.parse_literal()?);
                }
                TokenKind::Occurs => {
                    self.advance();
                    if let TokenKind::Number(n) = self.current().clone() {
                        self.advance();
                        occurs = Some(n as u32);
                    }
                    self.match_token(&TokenKind::Times);
                    // Skip INDEXED BY
                    if *self.current() == TokenKind::Indexed {
                        self.advance();
                        self.match_token(&TokenKind::By);
                        self.expect_ident()?;
                    }
                }
                TokenKind::Redefines => {
                    self.advance();
                    redefines = Some(self.expect_ident()?);
                }
                TokenKind::Usage => {
                    self.advance();
                    // Optional IS
                    if let TokenKind::Ident(s) = self.current() { if s == "IS" { self.advance(); } }
                    usage = Some(self.expect_ident()?);
                }
                _ => { self.advance(); } // skip unknown clauses
            }
        }
        self.match_token(&TokenKind::Period);

        // Parse child items (higher level numbers)
        let mut children = Vec::new();
        let mut conditions = Vec::new();
        while let TokenKind::Level(child_level) = self.current().clone() {
            if child_level <= level && child_level != 88 { break; }
            if child_level == 88 {
                let cond_item = self.parse_data_item(88)?;
                for c in cond_item.conditions { conditions.push(c); }
            } else {
                children.push(self.parse_data_item(child_level)?);
            }
        }

        Ok(DataItem { level, name, pic, value, occurs, redefines, usage, children, conditions })
    }

    fn parse_pic_string(&mut self) -> Result<String, String> {
        let mut pic = String::new();
        // PIC can be: X(20), 9(5)V99, S9(5), A(10), etc.
        while !matches!(self.current(), TokenKind::Period | TokenKind::Value | TokenKind::Occurs | TokenKind::Redefines | TokenKind::Usage | TokenKind::Eof) {
            match self.current().clone() {
                TokenKind::Ident(s) => { pic.push_str(&s); self.advance(); }
                TokenKind::Number(n) => { pic.push_str(&n.to_string()); self.advance(); }
                TokenKind::LParen => { pic.push('('); self.advance(); }
                TokenKind::RParen => { pic.push(')'); self.advance(); }
                _ => break,
            }
        }
        Ok(pic)
    }

    fn parse_literal(&mut self) -> Result<Literal, String> {
        match self.current().clone() {
            TokenKind::Number(n) => { self.advance(); Ok(Literal::Num(n)) }
            TokenKind::Str(s) => { self.advance(); Ok(Literal::Str(s)) }
            TokenKind::Spaces => { self.advance(); Ok(Literal::Spaces) }
            TokenKind::Zeros => { self.advance(); Ok(Literal::Zeros) }
            TokenKind::LowValues => { self.advance(); Ok(Literal::LowValues) }
            TokenKind::HighValues => { self.advance(); Ok(Literal::HighValues) }
            TokenKind::True => { self.advance(); Ok(Literal::True) }
            TokenKind::False => { self.advance(); Ok(Literal::False) }
            TokenKind::Minus => {
                self.advance();
                if let TokenKind::Number(n) = self.current().clone() {
                    self.advance();
                    Ok(Literal::Num(-n))
                } else {
                    Ok(Literal::Num(0.0))
                }
            }
            _ => Err(format!("Expected literal, got {:?} at line {}", self.current(), self.current_line())),
        }
    }

    fn skip_to_period(&mut self) {
        while *self.current() != TokenKind::Period && !self.at_end() {
            self.advance();
        }
        self.match_token(&TokenKind::Period);
    }

    // ------------------------------------------------------------------
    // PROCEDURE DIVISION
    // ------------------------------------------------------------------

    fn parse_procedure_division(&mut self) -> Result<(Vec<Statement>, Vec<Paragraph>), String> {
        let mut main_body = Vec::new();
        let mut paragraphs = Vec::new();

        // Parse statements until we hit a paragraph name (ident followed by period at start)
        // or end of input
        loop {
            if self.at_end() { break; }

            // Check for paragraph definition: IDENT.
            if self.is_paragraph_start() {
                break;
            }

            if let Some(stmt) = self.parse_statement()? {
                main_body.push(stmt);
            }
            self.skip_periods();
        }

        // Parse paragraphs
        while !self.at_end() {
            if self.is_paragraph_start() {
                let name = self.expect_ident()?;
                self.expect(&TokenKind::Period)?;
                let mut body = Vec::new();
                while !self.at_end() && !self.is_paragraph_start() {
                    if let Some(stmt) = self.parse_statement()? {
                        body.push(stmt);
                    }
                    self.skip_periods();
                }
                paragraphs.push(Paragraph { name, body });
            } else {
                break;
            }
        }

        Ok((main_body, paragraphs))
    }

    fn is_paragraph_start(&self) -> bool {
        if let TokenKind::Ident(_) = self.current() {
            if self.pos + 1 < self.tokens.len() && self.tokens[self.pos + 1].kind == TokenKind::Period {
                // Check that the next-next token is NOT a data keyword
                // (to avoid confusing "STOP. RUN." with a paragraph)
                if let TokenKind::Ident(name) = self.current() {
                    // Known paragraphs end with -PARA, -SECTION, etc.
                    // But really any IDENT followed by period at the start of a statement
                    // where the ident isn't a known keyword is a paragraph
                    return !matches!(name.as_str(),
                        "STOP" | "RUN" | "IS" | "DISPLAY" | "ACCEPT" | "MOVE" |
                        "ADD" | "SUBTRACT" | "MULTIPLY" | "DIVIDE" | "COMPUTE" |
                        "CALL" | "SET" | "INITIALIZE" | "INSPECT" | "STRING" | "UNSTRING"
                    );
                }
            }
        }
        false
    }

    fn parse_statement(&mut self) -> Result<Option<Statement>, String> {
        match self.current().clone() {
            TokenKind::DisplayKw => self.parse_display(),
            TokenKind::Accept => self.parse_accept(),
            TokenKind::Move => self.parse_move(),
            TokenKind::Add => self.parse_add(),
            TokenKind::Subtract => self.parse_subtract(),
            TokenKind::Multiply => self.parse_multiply(),
            TokenKind::Divide => self.parse_divide(),
            TokenKind::Compute => self.parse_compute(),
            TokenKind::If => self.parse_if(),
            TokenKind::Evaluate => self.parse_evaluate(),
            TokenKind::Perform => self.parse_perform(),
            TokenKind::String_ => self.parse_string_stmt(),
            TokenKind::Unstring => self.parse_unstring(),
            TokenKind::Inspect => self.parse_inspect(),
            TokenKind::Call => self.parse_call(),
            TokenKind::Initialize => self.parse_initialize(),
            TokenKind::Set => self.parse_set(),
            TokenKind::Continue => { self.advance(); Ok(Some(Statement::Continue)) }
            TokenKind::Goback => { self.advance(); Ok(Some(Statement::Goback)) }
            TokenKind::Go => self.parse_goto(),
            TokenKind::Raise => self.parse_raise(),
            TokenKind::Json => self.parse_json(),
            TokenKind::Open => self.parse_open(),
            TokenKind::Close => { self.advance(); let n = self.expect_ident()?; Ok(Some(Statement::Close(n))) }
            TokenKind::Read => self.parse_read(),
            TokenKind::Write => self.parse_write(),
            TokenKind::Sort => self.parse_sort(),
            TokenKind::Search => self.parse_search(),
            TokenKind::Rewrite => {
                self.advance();
                let record = self.expect_ident()?;
                let from = if self.match_token(&TokenKind::From) { Some(self.expect_ident()?) } else { None };
                self.match_token(&TokenKind::EndRewrite);
                Ok(Some(Statement::Rewrite { record, from }))
            }
            TokenKind::Delete => {
                self.advance();
                let file = self.expect_ident()?;
                self.match_token(&TokenKind::EndDelete);
                Ok(Some(Statement::DeleteFile(file)))
            }
            TokenKind::Start => {
                self.advance();
                let file = self.expect_ident()?;
                let key = if self.match_token(&TokenKind::Key) {
                    self.match_token(&TokenKind::Eq);
                    Some(self.expect_ident()?)
                } else { None };
                self.match_token(&TokenKind::EndStart);
                Ok(Some(Statement::StartFile { file, key }))
            }
            TokenKind::Exit => {
                self.advance();
                if self.match_token(&TokenKind::Perform) {
                    Ok(Some(Statement::ExitPerform))
                } else if self.match_token(&TokenKind::Paragraph) {
                    Ok(Some(Statement::ExitParagraph))
                } else {
                    Ok(Some(Statement::Continue))
                }
            }
            TokenKind::Merge => {
                self.advance();
                let file = self.expect_ident()?;
                self.match_token(&TokenKind::On);
                let ascending = if self.match_token(&TokenKind::Descending) { false }
                else { self.match_token(&TokenKind::Ascending); true };
                self.match_token(&TokenKind::Key);
                let key = self.expect_ident()?;
                Ok(Some(Statement::Merge { file, ascending, key }))
            }
            TokenKind::Copy => {
                self.advance();
                let name = self.expect_ident()?;
                Ok(Some(Statement::Copy(name)))
            }
            TokenKind::Invoke => {
                self.advance();
                let object = self.expect_ident()?;
                let method = self.expect_ident()?;
                let mut args = Vec::new();
                if self.match_token(&TokenKind::Using) {
                    while !matches!(self.current(), TokenKind::Returning | TokenKind::Period | TokenKind::Eof | TokenKind::EndIf | TokenKind::EndPerform) {
                        args.push(self.expect_ident()?);
                    }
                }
                let returning = if self.match_token(&TokenKind::Returning) {
                    Some(self.expect_ident()?)
                } else { None };
                Ok(Some(Statement::Invoke { object, method, args, returning }))
            }
            TokenKind::Validate => {
                self.advance();
                let var = self.expect_ident()?;
                self.match_token(&TokenKind::EndValidate);
                Ok(Some(Statement::ValidateStmt(var)))
            }
            TokenKind::Free => {
                self.advance();
                let var = self.expect_ident()?;
                Ok(Some(Statement::FreeStmt(var)))
            }
            TokenKind::Allocate => {
                self.advance();
                let var = self.expect_ident()?;
                Ok(Some(Statement::AllocateStmt(var)))
            }
            TokenKind::Ident(ref s) if s == "STOP" => {
                self.advance();
                if let TokenKind::Ident(s) = self.current() {
                    if s == "RUN" { self.advance(); }
                }
                Ok(Some(Statement::StopRun))
            }
            TokenKind::Period | TokenKind::Eof => { Ok(None) }
            _ => {
                self.advance();
                Ok(None)
            }
        }
    }

    // ------------------------------------------------------------------
    // Statement parsers
    // ------------------------------------------------------------------

    fn parse_display(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // DISPLAY
        let mut exprs = Vec::new();
        while !matches!(self.current(), TokenKind::Period | TokenKind::Eof | TokenKind::EndIf | TokenKind::Else | TokenKind::EndPerform | TokenKind::EndEvaluate | TokenKind::When | TokenKind::Other) {
            exprs.push(self.parse_expr()?);
        }
        Ok(Some(Statement::Display(exprs)))
    }

    fn parse_accept(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // ACCEPT
        let name = self.expect_ident()?;
        // Check for FROM DATE/TIME/DAY
        if self.match_token(&TokenKind::From) {
            let source = match self.current() {
                TokenKind::Ident(s) if s == "DATE" => { self.advance(); AcceptSource::Date }
                TokenKind::Ident(s) if s == "TIME" => { self.advance(); AcceptSource::Time }
                TokenKind::Ident(s) if s == "DAY" => { self.advance(); AcceptSource::Day }
                TokenKind::Ident(s) if s == "DAY-OF-WEEK" => { self.advance(); AcceptSource::DayOfWeek }
                _ => AcceptSource::Console,
            };
            return Ok(Some(Statement::AcceptFrom { var: name, source }));
        }
        Ok(Some(Statement::Accept(name)))
    }

    fn parse_move(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // MOVE
        if self.match_token(&TokenKind::Corresponding) || self.match_token(&TokenKind::Corr) {
            let src = self.expect_ident()?;
            self.expect(&TokenKind::To)?;
            let dst = self.expect_ident()?;
            return Ok(Some(Statement::MoveCorresponding { src, dst }));
        }
        let src = self.parse_expr()?;
        self.expect(&TokenKind::To)?;
        let mut dsts = vec![self.expect_ident()?];
        while let TokenKind::Ident(_) = self.current() {
            if matches!(self.current(), TokenKind::Period) { break; }
            dsts.push(self.expect_ident()?);
        }
        Ok(Some(Statement::Move { src, dsts }))
    }

    fn parse_add(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // ADD
        let mut srcs = vec![self.parse_expr()?];
        while !matches!(self.current(), TokenKind::To | TokenKind::Giving | TokenKind::Period | TokenKind::Eof) {
            srcs.push(self.parse_expr()?);
        }
        self.expect(&TokenKind::To)?;
        let to = self.expect_ident()?;
        let giving = if self.match_token(&TokenKind::Giving) {
            Some(self.expect_ident()?)
        } else { None };
        Ok(Some(Statement::Add { srcs, to, giving }))
    }

    fn parse_subtract(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // SUBTRACT
        let src = self.parse_expr()?;
        self.expect(&TokenKind::From)?;
        let from = self.expect_ident()?;
        let giving = if self.match_token(&TokenKind::Giving) {
            Some(self.expect_ident()?)
        } else { None };
        Ok(Some(Statement::Subtract { src, from, giving }))
    }

    fn parse_multiply(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // MULTIPLY
        let src = self.parse_expr()?;
        self.expect(&TokenKind::By)?;
        let by = self.expect_ident()?;
        let giving = if self.match_token(&TokenKind::Giving) {
            Some(self.expect_ident()?)
        } else { None };
        Ok(Some(Statement::Multiply { src, by, giving }))
    }

    fn parse_divide(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // DIVIDE
        let src = self.parse_expr()?;
        self.expect(&TokenKind::By)?;
        let by = self.parse_expr()?;
        self.expect(&TokenKind::Giving)?;
        let giving = self.expect_ident()?;
        let remainder = if self.match_token(&TokenKind::Remainder) {
            Some(self.expect_ident()?)
        } else { None };
        Ok(Some(Statement::Divide { src, by, giving, remainder }))
    }

    fn parse_compute(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // COMPUTE
        let dst = self.expect_ident()?;
        self.expect(&TokenKind::Eq)?;
        let expr = self.parse_expr()?;
        Ok(Some(Statement::Compute { dst, expr }))
    }

    fn parse_if(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // IF
        let test = self.parse_condition()?;
        self.match_token(&TokenKind::Then);
        let mut body = Vec::new();
        while !matches!(self.current(), TokenKind::Else | TokenKind::EndIf | TokenKind::Period | TokenKind::Eof) {
            if let Some(stmt) = self.parse_statement()? {
                body.push(stmt);
            }
            self.skip_periods();
        }
        let else_body = if self.match_token(&TokenKind::Else) {
            let mut stmts = Vec::new();
            while !matches!(self.current(), TokenKind::EndIf | TokenKind::Period | TokenKind::Eof) {
                if let Some(stmt) = self.parse_statement()? {
                    stmts.push(stmt);
                }
                self.skip_periods();
            }
            Some(stmts)
        } else { None };
        self.match_token(&TokenKind::EndIf);
        Ok(Some(Statement::If { test, body, else_body }))
    }

    fn parse_evaluate(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // EVALUATE
        let subject = self.parse_expr()?;
        let mut whens = Vec::new();
        let mut other = None;

        while self.match_token(&TokenKind::When) {
            if self.match_token(&TokenKind::Other) {
                let mut body = Vec::new();
                while !matches!(self.current(), TokenKind::When | TokenKind::EndEvaluate | TokenKind::Period | TokenKind::Eof) {
                    if let Some(stmt) = self.parse_statement()? {
                        body.push(stmt);
                    }
                    self.skip_periods();
                }
                other = Some(body);
                break;
            }
            let mut values = vec![self.parse_expr()?];
            // Handle WHEN val1 ALSO val2 or multiple values
            while self.match_token(&TokenKind::Comma) {
                values.push(self.parse_expr()?);
            }
            let mut body = Vec::new();
            while !matches!(self.current(), TokenKind::When | TokenKind::EndEvaluate | TokenKind::Period | TokenKind::Eof) {
                if let Some(stmt) = self.parse_statement()? {
                    body.push(stmt);
                }
                self.skip_periods();
            }
            whens.push(WhenClause { values, body });
        }
        self.match_token(&TokenKind::EndEvaluate);
        Ok(Some(Statement::Evaluate { subject, whens, other }))
    }

    fn parse_perform(&mut self) -> Result<Option<Statement>, String> {
        self.advance(); // PERFORM

        // PERFORM VARYING
        if self.match_token(&TokenKind::Varying) {
            let var = self.expect_ident()?;
            self.expect(&TokenKind::From)?;
            let from = self.parse_expr()?;
            self.expect(&TokenKind::By)?;
            let by = self.parse_expr()?;
            self.expect(&TokenKind::Until)?;
            let until = self.parse_condition()?;
            let mut body = Vec::new();
            while !matches!(self.current(), TokenKind::EndPerform | TokenKind::Period | TokenKind::Eof) {
                if let Some(stmt) = self.parse_statement()? {
                    body.push(stmt);
                }
                self.skip_periods();
            }
            self.match_token(&TokenKind::EndPerform);
            return Ok(Some(Statement::PerformVarying { var, from, by, until, body }));
        }
